<resources>
    <string name="app_name">Simpson</string>
    <string name="left_button">Mover a la izquierda</string>
    <string name="right_button">Mover a la derecha</string>
    <string name="up_button">Subir</string>
    <string name="action_button">Acción</string>
    <string name="skin_button">Cambiar diseño</string>
    <string name="skin_title">Elegir estilo de los controles</string>
</resources>
