<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0B1020">

    <com.simpson.game.GameView
        android:id="@+id/gameView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/skinButton"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_margin="18dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/skin_button"
        android:scaleType="centerInside"
        android:src="@drawable/ic_button_action"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/controlLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/leftButton"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginEnd="18dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/left_button"
            android:scaleType="centerInside"
            android:src="@drawable/ic_button_left" />

        <ImageButton
            android:id="@+id/rightButton"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginEnd="18dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/right_button"
            android:scaleType="centerInside"
            android:src="@drawable/ic_button_right" />

        <ImageButton
            android:id="@+id/upButton"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginEnd="28dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/up_button"
            android:scaleType="centerInside"
            android:src="@drawable/ic_button_up" />

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/actionButton"
            android:layout_width="92dp"
            android:layout_height="92dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/action_button"
            android:scaleType="centerInside"
            android:src="@drawable/ic_button_action" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
